# swiss-law-as-source.github.io

./: .gitignore  INDEX.md  LICENSE  README.md  TODO.md  api.html  cantonal_directory_structure.md  cantonal_sources.md  cross_level_refs.html  cross_level_refs.json  crossrefs.html  diff.html  index.html  laws.json  pyproject.toml  stats.html  stats.json
.github/workflows/: publish.yml
docs/: cross_level_refs.html  cross_level_refs.json  crossrefs.html  crossrefs.json  diff.html  index.html  laws.json  stats.html  stats.json
docs/feeds/: changes.atom
exports/: laws_metadata.csv
feeds/: changes.rss
scripts/: discover_canton_apis.py  generate_search_index.py  health_check.sh  push_to_github.sh  repair_openfisca.py  weekly_update.sh
src/legalize_ch/: api.py  (+22 more)
tests/: test_api.py  test_canton_rollout.py  test_cantonal.py  test_cantonal_pipeline.py  test_cantonal_transformer.py  test_chronological.py  test_commit_initial.py  test_cross_level_refs.py  test_error_recovery.py  test_exporter.py  test_fetcher.py  test_health_check.py  test_incremental.py  test_index_generator.py  test_integration.py  test_notify.py  test_pagination.py  test_pid_lock.py  test_reindex.py  test_retry.py  test_rss_feed.py  test_static_export.py  test_transformer.py  test_translator.py  test_validator.py  test_zurich_fetcher.py
trees/: ag.json  ai.json  ar.json  be.json  bl.json  bs.json  ch.json  fr.json  ge.json  gl.json  global.json  gr.json  ju.json  lu.json  ne.json  nw.json  ow.json  sg.json  sh.json  so.json  sz.json  tg.json  ti.json  ur.json  vd.json  vs.json  zg.json  zh.json
(+43076 files in other folders)
