[project]
name = "legalize-ch"
version = "0.1.0"
description = "Swiss law as version-controlled Markdown — fetched from Fedlex SPARQL"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31",
    "SPARQLWrapper>=2.0",
    "python-dateutil>=2.8",
    "pyyaml>=6.0",
    "lxml>=5.0",
    "click>=8.1",
    "html2text>=2024.2",
    "anthropic>=0.39",
    "fastapi>=0.100",
    "uvicorn>=0.23",
    "openfisca-core>=44.0",
]

[project.scripts]
legalize-ch = "legalize_ch.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
